// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link demo examples basic 1`] = `
.css-0,
[data-css-0] {
  font-family: Open Sans;
}

.css-1,
[data-css-1] {
  font-size: 1.5em;
}

.css-2,
[data-css-2] {
  color: #3272d9;
  text-decoration: none;
}

.css-2:hover,
[data-css-2]:hover,
.css-2[data-simulate-hover],
[data-css-2][data-simulate-hover] {
  color: #5691f0;
  text-decoration: underline;
}

.css-2:focus,
[data-css-2]:focus,
.css-2[data-simulate-focus],
[data-css-2][data-simulate-focus] {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.css-2:active,
[data-css-2]:active,
.css-2[data-simulate-active],
[data-css-2][data-simulate-active] {
  color: #1d5bbf;
}

.css-12,
[data-css-12] {
  font-size: 0.75em;
}

.css-13,
[data-css-13] {
  font-weight: 700;
}

.css-14,
[data-css-14] {
  font-family: serif;
}

<glamorous(div)>
  <div
    className="css-0"
  >
    <glamorous(p)>
      <p
        className="css-1"
      >
        Lorem ipsum dolor sit amet, 
        <Link
          href="http://example.com"
        >
          <Link
            href="http://example.com"
            target="_blank"
          >
            <Link
              href="http://example.com"
              target="_blank"
              variant="regular"
            >
              <a
                className="css-2"
                href="http://example.com"
                target="_blank"
              >
                consectetur
              </a>
            </Link>
          </Link>
        </Link>
         adipiscing elit,
      </p>
    </glamorous(p)>
    <glamorous(p)>
      <p
        className="css-12"
      >
        sed do eiusmod tempor 
        <Link
          href="http://example.com"
        >
          <Link
            href="http://example.com"
            target="_blank"
          >
            <Link
              href="http://example.com"
              target="_blank"
              variant="regular"
            >
              <a
                className="css-2"
                href="http://example.com"
                target="_blank"
              >
                incididunt
              </a>
            </Link>
          </Link>
        </Link>
         ut labore et dolore magna aliqua.
      </p>
    </glamorous(p)>
    <glamorous(p)>
      <p
        className="css-13"
      >
        Ut enim 
        <Link
          href="http://example.com"
        >
          <Link
            href="http://example.com"
            target="_blank"
          >
            <Link
              href="http://example.com"
              target="_blank"
              variant="regular"
            >
              <a
                className="css-2"
                href="http://example.com"
                target="_blank"
              >
                ad minim veniam
              </a>
            </Link>
          </Link>
        </Link>
         quis nostrud exercitation
      </p>
    </glamorous(p)>
    <glamorous(p)>
      <p
        className="css-14"
      >
        ullamco laboris 
        <Link
          href="http://example.com"
        >
          <Link
            href="http://example.com"
            target="_blank"
          >
            <Link
              href="http://example.com"
              target="_blank"
              variant="regular"
            >
              <a
                className="css-2"
                href="http://example.com"
                target="_blank"
              >
                nisi ut
              </a>
            </Link>
          </Link>
        </Link>
         aliquip ex ea commodo consequat.
      </p>
    </glamorous(p)>
  </div>
</glamorous(div)>
`;

exports[`Link demo examples button 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  -moz-osx-font-smoothing: auto;
  -webkit-font-smoothing: antialiased;
  background-color: #ebeff5;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: inline-block;
  font-weight: 600;
  height: 2.5em;
  min-width: 2.5em;
  padding: 0 0.5em;
  text-decoration: none;
  vertical-align: middle;
}

.css-0 *,
[data-css-0] *,
.css-0 *::before,
[data-css-0] *::before,
.css-0 *::after,
[data-css-0] *::after {
  box-sizing: inherit;
}

.css-0:focus,
[data-css-0]:focus,
.css-0[data-simulate-focus],
[data-css-0][data-simulate-focus] {
  background-color: #ebeff5;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #1d5bbf;
  color: #333840;
  text-decoration: none;
}

.css-0:hover,
[data-css-0]:hover,
.css-0[data-simulate-hover],
[data-css-0][data-simulate-hover] {
  background-color: #f5f7fa;
  color: #333840;
  text-decoration: none;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  background-color: #dde3ed;
  color: #333840;
}

.css-0::-moz-focus-inner,
[data-css-0]::-moz-focus-inner,
.css-0[data-simulate-mozfocusinner],
[data-css-0][data-simulate-mozfocusinner] {
  border: 0;
}

.css-0 [role="img"],
[data-css-0] [role="img"] {
  box-sizing: content-box;
  color: #3272d9;
  display: block;
}

.css-0 [role="img"]:first-child,
[data-css-0] [role="img"]:first-child {
  margin-right: 0.5em;
}

.css-0 [role="img"]:last-child,
[data-css-0] [role="img"]:last-child {
  margin-left: 0.5em;
}

.css-0 [role="img"]:only-child,
[data-css-0] [role="img"]:only-child {
  margin: 0;
}

.css-14,
[data-css-14] {
  align-items: center;
  display: -webkit-inline-box;
  display: -moz-inline-box;
  display: -ms-inline-flexbox;
  display: -webkit-inline-flex;
  display: inline-flex;
  justify-content: center;
  max-height: 100%;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
}

.css-15,
[data-css-15] {
  display: block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  font-size: 0.875em;
  line-height: 2.857142857142857em;
}

.css-15:first-child,
[data-css-15]:first-child,
.css-15[data-simulate-firstchild],
[data-css-15][data-simulate-firstchild] {
  padding-left: 0.5714285714285714em;
}

.css-15:last-child,
[data-css-15]:last-child,
.css-15[data-simulate-lastchild],
[data-css-15][data-simulate-lastchild] {
  padding-right: 0.5714285714285714em;
}

<Button
  element="a"
  href="#button"
  size="large"
  type="button"
  variant="regular"
>
  <glamorous(a)
    element="a"
    href="#button"
    size="large"
    text="Link"
    type="button"
    variant="regular"
  >
    <a
      className="css-0"
      href="#button"
    >
      <glamorous(span)>
        <span
          className="css-14"
        >
          <glamorous(span)
            size="large"
          >
            <span
              className="css-15"
            >
              Link
            </span>
          </glamorous(span)>
        </span>
      </glamorous(span)>
    </a>
  </glamorous(a)>
</Button>
`;

exports[`Link demo examples children 1`] = `
.css-0,
[data-css-0] {
  color: #3272d9;
  text-decoration: none;
}

.css-0:hover,
[data-css-0]:hover,
.css-0[data-simulate-hover],
[data-css-0][data-simulate-hover] {
  color: #5691f0;
  text-decoration: underline;
}

.css-0:focus,
[data-css-0]:focus,
.css-0[data-simulate-focus],
[data-css-0][data-simulate-focus] {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  color: #1d5bbf;
}

<Link
  href="http://example.com"
>
  <Link
    href="http://example.com"
    target="_blank"
  >
    <Link
      href="http://example.com"
      target="_blank"
      variant="regular"
    >
      <a
        className="css-0"
        href="http://example.com"
        target="_blank"
      >
        <img
          alt="gradient placeholder"
          src="/images/125x125.png"
        />
      </a>
    </Link>
  </Link>
</Link>
`;

exports[`Link demo examples other 1`] = `
.css-0,
[data-css-0] {
  font-family: Open Sans;
}

.css-1,
[data-css-1] {
  color: #3272d9;
  text-decoration: none;
}

.css-1:hover,
[data-css-1]:hover,
.css-1[data-simulate-hover],
[data-css-1][data-simulate-hover] {
  color: #5691f0;
  text-decoration: underline;
}

.css-1:focus,
[data-css-1]:focus,
.css-1[data-simulate-focus],
[data-css-1][data-simulate-focus] {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.css-1:active,
[data-css-1]:active,
.css-1[data-simulate-active],
[data-css-1][data-simulate-active] {
  color: #1d5bbf;
}

<glamorous(div)>
  <div
    className="css-0"
  >
    <BrowserRouter>
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "createHref": [Function],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "blank",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <Link
          element={[Function]}
          to="/components/link"
        >
          <Link
            to="/components/link"
            variant="regular"
          >
            <Link
              className="css-1"
              replace={false}
              to="/components/link"
            >
              <a
                className="css-1"
                href="/components/link"
                onClick={[Function]}
              >
                ReactRouter Link
              </a>
            </Link>
          </Link>
        </Link>
      </Router>
    </BrowserRouter>
  </div>
</glamorous(div)>
`;

exports[`Link demo examples states 1`] = `
.css-0,
[data-css-0] {
  color: #3272d9;
  text-decoration: none;
}

.css-0:hover,
[data-css-0]:hover,
.css-0[data-simulate-hover],
[data-css-0][data-simulate-hover] {
  color: #5691f0;
  text-decoration: underline;
}

.css-0:focus,
[data-css-0]:focus,
.css-0[data-simulate-focus],
[data-css-0][data-simulate-focus] {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  color: #1d5bbf;
}

.css-10,
[data-css-10] {
  font-family: Open Sans;
}

.css-10 > a,
[data-css-10] > a {
  margin-right: 0.5rem;
}

.css-11,
[data-css-11] {
  color: #de1b1b;
  text-decoration: none;
}

.css-11:hover,
[data-css-11]:hover,
.css-11[data-simulate-hover],
[data-css-11][data-simulate-hover] {
  color: #f55353;
  text-decoration: underline;
}

.css-11:focus,
[data-css-11]:focus,
.css-11[data-simulate-focus],
[data-css-11][data-simulate-focus] {
  color: #de1b1b;
  outline: 1px solid #b80d0d;
  outline-offset: 2px;
}

.css-11:active,
[data-css-11]:active,
.css-11[data-simulate-active],
[data-css-11][data-simulate-active] {
  color: #b80d0d;
}

.css-21,
[data-css-21] {
  color: #2a854e;
  text-decoration: none;
}

.css-21:hover,
[data-css-21]:hover,
.css-21[data-simulate-hover],
[data-css-21][data-simulate-hover] {
  color: #3ba164;
  text-decoration: underline;
}

.css-21:focus,
[data-css-21]:focus,
.css-21[data-simulate-focus],
[data-css-21][data-simulate-focus] {
  color: #2a854e;
  outline: 1px solid #20693d;
  outline-offset: 2px;
}

.css-21:active,
[data-css-21]:active,
.css-21[data-simulate-active],
[data-css-21][data-simulate-active] {
  color: #20693d;
}

.css-31,
[data-css-31] {
  color: #ad5f00;
  text-decoration: none;
}

.css-31:hover,
[data-css-31]:hover,
.css-31[data-simulate-hover],
[data-css-31][data-simulate-hover] {
  color: #cf7911;
  text-decoration: underline;
}

.css-31:focus,
[data-css-31]:focus,
.css-31[data-simulate-focus],
[data-css-31][data-simulate-focus] {
  color: #ad5f00;
  outline: 1px solid #8a4d03;
  outline-offset: 2px;
}

.css-31:active,
[data-css-31]:active,
.css-31[data-simulate-active],
[data-css-31][data-simulate-active] {
  color: #8a4d03;
}

<glamorous(glamorous(div))>
  <div
    className="css-10"
  >
    <Link
      href="http://example.com"
    >
      <Link
        href="http://example.com"
        target="_blank"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            href="http://example.com"
            target="_blank"
          >
            Regular
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-hover=""
      href="http://example.com"
    >
      <Link
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
      >
        <Link
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      href="http://example.com"
    >
      <Link
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
      >
        <Link
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      data-simulate-hover=""
      href="http://example.com"
    >
      <Link
        data-simulate-focus=""
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
      >
        <Link
          data-simulate-focus=""
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            data-simulate-focus=""
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      data-simulate-focus=""
      href="http://example.com"
    >
      <Link
        data-simulate-active=""
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
      >
        <Link
          data-simulate-active=""
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            data-simulate-active=""
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Active
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      href="http://example.com"
    >
      <Link
        data-simulate-active=""
        href="http://example.com"
        target="_blank"
      >
        <Link
          data-simulate-active=""
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            data-simulate-active=""
            href="http://example.com"
            target="_blank"
          >
            Active
          </a>
        </Link>
      </Link>
    </Link>
    <br />
    <br />
    <Link
      href="http://example.com"
      variant="danger"
    >
      <Link
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            href="http://example.com"
            target="_blank"
          >
            Danger
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-hover=""
      href="http://example.com"
      variant="danger"
    >
      <Link
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      href="http://example.com"
      variant="danger"
    >
      <Link
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      data-simulate-hover=""
      href="http://example.com"
      variant="danger"
    >
      <Link
        data-simulate-focus=""
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          data-simulate-focus=""
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            data-simulate-focus=""
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      data-simulate-focus=""
      href="http://example.com"
      variant="danger"
    >
      <Link
        data-simulate-active=""
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          data-simulate-active=""
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            data-simulate-active=""
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Active
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      href="http://example.com"
      variant="danger"
    >
      <Link
        data-simulate-active=""
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          data-simulate-active=""
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            data-simulate-active=""
            href="http://example.com"
            target="_blank"
          >
            Active
          </a>
        </Link>
      </Link>
    </Link>
    <br />
    <br />
    <Link
      href="http://example.com"
      variant="success"
    >
      <Link
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            href="http://example.com"
            target="_blank"
          >
            Success
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-hover=""
      href="http://example.com"
      variant="success"
    >
      <Link
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      href="http://example.com"
      variant="success"
    >
      <Link
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      data-simulate-hover=""
      href="http://example.com"
      variant="success"
    >
      <Link
        data-simulate-focus=""
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          data-simulate-focus=""
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            data-simulate-focus=""
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      data-simulate-focus=""
      href="http://example.com"
      variant="success"
    >
      <Link
        data-simulate-active=""
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          data-simulate-active=""
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            data-simulate-active=""
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Active
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      href="http://example.com"
      variant="success"
    >
      <Link
        data-simulate-active=""
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          data-simulate-active=""
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            data-simulate-active=""
            href="http://example.com"
            target="_blank"
          >
            Active
          </a>
        </Link>
      </Link>
    </Link>
    <br />
    <br />
    <Link
      href="http://example.com"
      variant="warning"
    >
      <Link
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            href="http://example.com"
            target="_blank"
          >
            Warning
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-hover=""
      href="http://example.com"
      variant="warning"
    >
      <Link
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      href="http://example.com"
      variant="warning"
    >
      <Link
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-focus=""
      data-simulate-hover=""
      href="http://example.com"
      variant="warning"
    >
      <Link
        data-simulate-focus=""
        data-simulate-hover=""
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          data-simulate-focus=""
          data-simulate-hover=""
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            data-simulate-focus=""
            data-simulate-hover=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Hover
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      data-simulate-focus=""
      href="http://example.com"
      variant="warning"
    >
      <Link
        data-simulate-active=""
        data-simulate-focus=""
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          data-simulate-active=""
          data-simulate-focus=""
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            data-simulate-active=""
            data-simulate-focus=""
            href="http://example.com"
            target="_blank"
          >
            Focus & Active
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      data-simulate-active=""
      href="http://example.com"
      variant="warning"
    >
      <Link
        data-simulate-active=""
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          data-simulate-active=""
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            data-simulate-active=""
            href="http://example.com"
            target="_blank"
          >
            Active
          </a>
        </Link>
      </Link>
    </Link>
  </div>
</glamorous(glamorous(div))>
`;

exports[`Link demo examples variants 1`] = `
.css-0,
[data-css-0] {
  color: #3272d9;
  text-decoration: none;
}

.css-0:hover,
[data-css-0]:hover,
.css-0[data-simulate-hover],
[data-css-0][data-simulate-hover] {
  color: #5691f0;
  text-decoration: underline;
}

.css-0:focus,
[data-css-0]:focus,
.css-0[data-simulate-focus],
[data-css-0][data-simulate-focus] {
  color: #3272d9;
  outline: 1px solid #1d5bbf;
  outline-offset: 2px;
}

.css-0:active,
[data-css-0]:active,
.css-0[data-simulate-active],
[data-css-0][data-simulate-active] {
  color: #1d5bbf;
}

.css-10,
[data-css-10] {
  font-family: Open Sans;
}

.css-10 > a,
[data-css-10] > a {
  margin-right: 0.5rem;
}

.css-11,
[data-css-11] {
  color: #de1b1b;
  text-decoration: none;
}

.css-11:hover,
[data-css-11]:hover,
.css-11[data-simulate-hover],
[data-css-11][data-simulate-hover] {
  color: #f55353;
  text-decoration: underline;
}

.css-11:focus,
[data-css-11]:focus,
.css-11[data-simulate-focus],
[data-css-11][data-simulate-focus] {
  color: #de1b1b;
  outline: 1px solid #b80d0d;
  outline-offset: 2px;
}

.css-11:active,
[data-css-11]:active,
.css-11[data-simulate-active],
[data-css-11][data-simulate-active] {
  color: #b80d0d;
}

.css-21,
[data-css-21] {
  color: #2a854e;
  text-decoration: none;
}

.css-21:hover,
[data-css-21]:hover,
.css-21[data-simulate-hover],
[data-css-21][data-simulate-hover] {
  color: #3ba164;
  text-decoration: underline;
}

.css-21:focus,
[data-css-21]:focus,
.css-21[data-simulate-focus],
[data-css-21][data-simulate-focus] {
  color: #2a854e;
  outline: 1px solid #20693d;
  outline-offset: 2px;
}

.css-21:active,
[data-css-21]:active,
.css-21[data-simulate-active],
[data-css-21][data-simulate-active] {
  color: #20693d;
}

.css-31,
[data-css-31] {
  color: #ad5f00;
  text-decoration: none;
}

.css-31:hover,
[data-css-31]:hover,
.css-31[data-simulate-hover],
[data-css-31][data-simulate-hover] {
  color: #cf7911;
  text-decoration: underline;
}

.css-31:focus,
[data-css-31]:focus,
.css-31[data-simulate-focus],
[data-css-31][data-simulate-focus] {
  color: #ad5f00;
  outline: 1px solid #8a4d03;
  outline-offset: 2px;
}

.css-31:active,
[data-css-31]:active,
.css-31[data-simulate-active],
[data-css-31][data-simulate-active] {
  color: #8a4d03;
}

<glamorous(glamorous(div))>
  <div
    className="css-10"
  >
    <Link
      href="http://example.com"
    >
      <Link
        href="http://example.com"
        target="_blank"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="regular"
        >
          <a
            className="css-0"
            href="http://example.com"
            target="_blank"
          >
            Regular
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      href="http://example.com"
      variant="danger"
    >
      <Link
        href="http://example.com"
        target="_blank"
        variant="danger"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="danger"
        >
          <a
            className="css-11"
            href="http://example.com"
            target="_blank"
          >
            Danger
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      href="http://example.com"
      variant="success"
    >
      <Link
        href="http://example.com"
        target="_blank"
        variant="success"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="success"
        >
          <a
            className="css-21"
            href="http://example.com"
            target="_blank"
          >
            Success
          </a>
        </Link>
      </Link>
    </Link>
    <Link
      href="http://example.com"
      variant="warning"
    >
      <Link
        href="http://example.com"
        target="_blank"
        variant="warning"
      >
        <Link
          href="http://example.com"
          target="_blank"
          variant="warning"
        >
          <a
            className="css-31"
            href="http://example.com"
            target="_blank"
          >
            Warning
          </a>
        </Link>
      </Link>
    </Link>
  </div>
</glamorous(glamorous(div))>
`;
